# accelerate-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
accelerate-sys/: Cargo.toml  README.md  build.rs
accelerate-sys/capi/: build.sh  test.sh
accelerate-sys/capi/src/: api.c  api.h
accelerate-sys/capi/test/: build.sh  build_sparse_fail.sh  main.cpp  sparse_fail.cpp
accelerate-sys/src/: lib.rs
src/: lib.rs
