[package]
name = "accelerate-sys"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Apple `Accelerate.framework` low-level FFI bindings"
repository = "https://github.com/elrnv/accelerate-framework"
homepage = "https://lib.rs/crates/accelerate-framework-sys"
documentation = "https://docs.rs/elrnv/accelerate-sys"
readme = "README.md"
keywords = ["ffi", "iOS", "Accelerate", "Linear Algebra"]
categories = ["os::macos-apis", "external-ffi-bindings"]
edition = "2021"
links = "Accelerate"

[dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
