[package]
name = "accelerate-sys"
version = "0.2.1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Apple `Accelerate.framework` low-level FFI bindings"
repository = "https://github.com/elrnv/accelerate-framework"
homepage = "https://lib.rs/crates/accelerate-framework-sys"
documentation = "https://docs.rs/elrnv/accelerate-sys"
readme = "README.md"
keywords = ["ffi", "iOS", "accelerate", "sparse", "linear", "algebra"]
categories = ["os::macos-apis", "external-ffi-bindings"]
edition = "2021"
links = "Accelerate"

[dependencies]
block = "0.1"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
